# obs-source-copy

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in  obs-websocket-api.h  source-copy.cpp  source-copy.hpp
.github/scripts/: Package-Windows.ps1
.github/workflows/: build.yml
CI/macos/: source-copy.pkgproj
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  pt-BR.ini  zh-CN.ini
